# Aether-Minecraft-Launcher

./: index.html  package-lock.json  package.json  vite.config.js
Aether-Minecraft-Launcher/: _fix_sidebar.cjs  package-lock.json
Aether-Minecraft-Launcher/src/: main.js  style.css
Aether-Minecraft-Launcher/src-tauri/: tauri.conf.json
Aether-Minecraft-Launcher/src/components/common/: AppBadge.vue  AppButton.vue
Aether-Minecraft-Launcher/src/components/layout/: Sidebar.vue  TitleBar.vue
Aether-Minecraft-Launcher/src/views/: Home.vue
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  prelude.rs  state.rs
src-tauri/src/components/: client.rs  http.rs  jave.rs  mod.rs  package.rs  password.rs  path.rs  progress.rs  semver.rs  utils.rs
src-tauri/src/components/auth/: authlib.rs  mod.rs  structs.rs
src-tauri/src/components/auth/microsoft/: legacy.rs  mod.rs
src-tauri/src/components/download/: authlib.rs  curseforge.rs  downloadmod.rs  fabric.rs  forge.rs  installer.rs  mcmod.rs  mod.rs  modrinth.rs  neoforge.rs  optifine.rs  quiltmc.rs  structs.rs  vanilla.rs
src-tauri/src/components/version/: checkmod.rs  mod.rs  mods.rs  structs.rs
src/components/common/: AppButton.vue  AppCard.vue  AppIcon.vue  AppSection.vue  MessageCenter.vue
src/components/layout/: AppLayout.vue  Sidebar.vue  TitleBar.vue
src/composables/: useMessages.js  useTauriApi.js  useTheme.js  useWindowControls.js
src/router/: index.js
src/views/: Download.vue  Home.vue  ModMarket.vue  Mods.vue  Settings.vue  UserProfile.vue  Versions.vue
